--- a/connectors/hackchat/package.json
+++ b/connectors/hackchat/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MinusGix",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ws": "^5.1.0"
+  }
 }
