--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.3",
-    "lz-string": "^1.4.4",
-    "ws": "^5.0.0"
+    "lz-string": "^1.4.4"
   }
 }
